# MapNreduce_2020

./: Barrier.cpp  Barrier.h  CMakeLists.txt  MapReduceFramework.cpp  MapReduceFramework.h  YairQuestions
SampleClient/: CMakeLists.txt  FileWordCounter.cpp  SampleClient.cpp
